added woff2 fonts for better performance, minor fixes

--- a/admin.html
+++ b/admin.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="assets/icon.png" type="image/png">
     <link rel="stylesheet" href="styles/style.css">
-    <title>Admin - Dashboard Orari</title>
+    <title>Admin - Dashboard orari</title>
 </head>
 
 <body>
