added repository link and minor css changes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 </head>
 
 <body>
-    <button id="toggleSettingsBtn" onclick="showSettings()"><span class="icon material-symbols-outlined">settings</span></button>
+    <button id="toggleSettingsBtn" onclick="showSettings()"><span
+            class="icon material-symbols-outlined">settings</span></button>
     <div id="settingsOverlay" class="hidden">
         <div id="settingsContainer">
             <h2>Impostazioni</h2>
