--- a/admin.html
+++ b/admin.html
@@ -16,16 +16,21 @@
         <input id="tokenInput" maxlength="64" type="password" name="token" required>
 
         <label for="fileInput">File CSV</label>
-        <input type="file"  id="fileInput" name="file" accept=".csv" required>
+        <input type="file" id="fileInput" name="file" accept=".csv" required>
         <button type="submit">Carica</button>
     </form>
+    <footer>
+        <img src="assets/github-logo.png" width="15" height="15" alt="GitHub logo">
+        <a href="https://github.com/lucAmbr0/dashboard-orari" target="_blank">dashboard-orari</a>
+    </footer>
 
-    
-    
+
+
     <style>
         body {
-            background-color: #cecece;
+            background-color: var(--gray-bg-2);
         }
+
         form {
             min-width: 400px;
             width: 35%;
@@ -38,8 +43,9 @@
             background-color: #D9D9D9;
             padding: 20px;
             border-radius: 20px;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.15);
-            border: solid 1px #202020;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
+            border: solid 2px var(--gray-bg-2);
+            animation: appearUp 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) forwards;
         }
 
         button {
@@ -51,6 +57,7 @@
             border: solid 2px #EBEBEB;
             width: fit-content;
             font-weight: 600;
+            box-shadow: 0 3px 10px rgba(0, 0, 0, 0.15);
             cursor: pointer;
             transition: 0.3s;
         }
